# cs3700

./: .gitignore  .gitmodules  3700bridge.python  Makefile  Notes-Bridging.md  README.md  test
3700Bridge/: .gitignore  3700bridge  Assignment-Notes.md
3700Bridge/configs/: setup-6.conf
3700Bridge/networks/: request_handler.py  utils.py
3700Bridge/tests/: test_bridge.py  test_packet.py
3700Crawler/: .gitmodules  README.md
3700Crawler.git/: config  packed-refs
3700Crawler.git/objects/pack/: pack-9ab1e68c5b2c8f2628145449cc232580c1222092.idx  pack-9ab1e68c5b2c8f2628145449cc232580c1222092.pack
3700Crawler/networks/: constants.py  launch.py
3700Router/: .gitignore  run
3700Router.git/: config  packed-refs
3700Router/networks/: packet.py  request_handler.py  router.py
3700Router/tests/: test_handler.py
3700TCP/: 3700recv  3700send
3700TCP.git/: config  packed-refs
3700TCP/networks/: constants.py  launch_receiver.py  packet.py
3700bridge.git/: config  packed-refs
networks/: bridge.py  constants.py  crawler.py  http_response.py  ipaddress.py  launch.py  launch_sender.py  packet.py  port.py  utils.py
project1/: README.md
project1/client/: .gitignore  Makefile  README.md  secret_flags
project1/client/wordle_guesser/: Cargo.toml
project1/client/wordle_guesser/.cargo/: config.toml
project1/client/wordle_guesser/src/: cmdline.rs  lib.rs  main.rs  player.rs  remote.rs
project1/server/: .gitignore  server
tests/: test_aggregration.py  test_cmd_args.py  test_forwarding.py  test_ipaddress.py  test_origin_entry.py  test_packet.py
(+9 files in other folders)
