cargo-features = ["edition2021"]

[package]
name = "wordle_guesser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.10", features = ["derive"] }
json = "0.12.4"
native-tls = "0.2.8"
regex = "1.5.4"